--- a/notebooks/01_dataset_creation.ipynb
+++ b/notebooks/01_dataset_creation.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "import pandas as pd\n",
     "import pymongo\n",
     "import yaml\n",
