--- a/aiot_dataset_creation.ipynb
+++ b/aiot_dataset_creation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "5a192af2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "4e970c28",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "bbb4f44b",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "f3cc2add",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "bdbb888f",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "203c2bc7",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "9937a0c8",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "622636fd",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "912f079f",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "fd476759",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['class_A']\n"
+      "['class_A', 'class_B']\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "0e8075f6",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['MetaWear_2024-05-01T19.31.17.371_F5174DCC3C91_Gyroscope_100.000Hz_1.7.3.csv']\n"
+      "['data_A_01.csv']\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "4bc16310",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "56c8d4e2",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploaded MetaWear_2024-05-01T19.31.17.371_F5174DCC3C91_Gyroscope_100.000Hz_1.7.3.csv from class_A\n"
+      "Uploaded data_A_01.csv from class_A\n",
+      "Uploaded data_B_01.csv from class_B\n"
      ]
     }
    ],
